# submod

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.toml  .roomodes  .roomodes.license  CHANGELOG.md  CLAUDE.md  CLI_IMPROVEMENTS_ASSESSMENT_REPORT.md  CLI_MIGRATION_MAPPING.md  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  FEATURE_CODE_REVIEW.md  GIT_OPERATIONS_REFACTORING_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE.md  Project Direction.md  README.md  REUSE.toml  _typos.toml  audit.toml  cliff.toml  debug_test  debug_test.rs  deny.toml  hk.pkl  license.toml  mise.toml  submod-sbom.spdx
.cargo/: audit.toml
.claude/: ecc-tools.json  hookify.warn-cat-alias.local.md  identity.json
.claude/skills/submod/: SKILL.md
.claudedocs/: FEATURE_CODE_REVIEW.md  GIT_OPERATIONS_REFACTORING_PLAN.md
.codex/: AGENTS.md
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.roo/: mcp.json
.serena/: project.yml
LICENSES/: LicenseRef-PlainMIT.md
benches/: benchmark.rs
dev/: _git2_api_notes.md  gix_api_notes.md  gix_refactoring_plan.md
dev/git2/doc/: help.html  settings.html
dev/gix/: all.html  enum.ObjectId.html  fn.discover.html  fn.init.html  fn.init_bare.html  fn.open.html  fn.open_opts.html  fn.prepare_clone.html  fn.prepare_clone_bare.html  index.html  repository.md  struct.AttributeStack.html  struct.Blob.html  struct.Commit.html  struct.Head.html  struct.Id.html  struct.Object.html  struct.ObjectDetached.html  struct.Pathspec.html  struct.PathspecDetached.html  struct.Reference.html  struct.Remote.html  struct.Repository.html  struct.Submodule.html  struct.Tag.html  struct.ThreadSafeRepository.html  struct.Tree.html  struct.Url.html  struct.Worktree.html  struct.oid.html  trait.Count.html  trait.DynNestedProgress.html  trait.NestedProgress.html  trait.Progress.html  type.OdbHandle.html  type.OdbHandleArc.html  type.RefStore.html
dev/gix/clone/: enum.Error.html  index.html  struct.PrepareFetch.html
dev/gix/commit/: constant.NO_PARENT_IDS.html  enum.Error.html  index.html
dev/gix/config/: enum.Error.html  enum.Source.html  fn.credential_helpers.html  index.html  struct.Boolean.html  struct.Color.html  struct.CommitAutoRollback.html  struct.File.html  struct.Integer.html  struct.KeyRef.html  struct.Path.html  struct.Snapshot.html  struct.SnapshotMut.html  struct.Tree.html  trait.AsKey.html
dev/gix/create/: enum.Error.html  enum.Kind.html  fn.into.html  index.html  struct.Options.html
dev/gix/diff/: fn.index.html  fn.new_rewrites.html  fn.resource_cache.html  fn.tree.html  fn.tree_with_rewrites.html  index.html  struct.Options.html  struct.Rewrites.html
dev/gix/dirwalk/: enum.Error.html  index.html  struct.Iter.html  struct.Options.html  struct.Outcome.html
dev/gix/discover/: constant.DOT_GIT_DIR.html  constant.MODULES.html  enum.Error.html  fn.is_bare.html  fn.is_git.html  fn.is_submodule_git_dir.html  fn.upwards.html  fn.upwards_opts.html  index.html
dev/gix/env/: fn.agent.html  fn.args_os.html  fn.args_os_opt.html  fn.os_str_to_bstring.html  index.html
dev/gix/filter/: index.html  struct.Pipeline.html
dev/gix/head/: enum.Kind.html  index.html
dev/gix/id/: index.html
dev/gix/index/: enum.Version.html  index.html  struct.AccelerateLookup.html  struct.Entry.html  struct.File.html  struct.State.html  type.PathStorage.html  type.PathStorageRef.html
dev/gix/init/: constant.DEFAULT_BRANCH_NAME.html  enum.Error.html  index.html
dev/gix/interrupt/: fn.is_triggered.html  fn.reset.html  fn.trigger.html  index.html  static.IS_INTERRUPTED.html  struct.Iter.html  struct.Read.html
dev/gix/object/: enum.Kind.html  index.html
dev/gix/open/: enum.Error.html  index.html  struct.Options.html  struct.Permissions.html
dev/gix/parallel/: enum.EagerIterIf.html  fn.build_thread.html  fn.in_parallel.html  fn.in_parallel_if.html  fn.in_parallel_with_finalize.html  fn.in_parallel_with_slice.html  fn.join.html  fn.num_threads.html  fn.optimize_chunk_size_and_thread_limit.html  fn.threads.html  index.html  struct.EagerIter.html  struct.InOrderIter.html  trait.Reduce.html  type.Scope.html  type.SequenceId.html
dev/gix/path/: fn.from_bstr.html  fn.from_bstring.html  fn.from_byte_slice.html  fn.into_bstr.html  fn.is_absolute.html  fn.join_bstr_unix_pathsep.html  fn.normalize.html  fn.os_str_into_bstr.html  fn.os_string_into_bstring.html  fn.realpath.html  fn.realpath_opts.html  fn.relativize_with_prefix.html  fn.to_native_path_on_windows.html  fn.to_native_separators.html  fn.to_unix_separators.html  fn.to_unix_separators_on_windows.html  fn.to_windows_separators.html  fn.try_from_bstr.html  fn.try_from_bstring.html  fn.try_from_byte_slice.html  fn.try_into_bstr.html  fn.try_os_str_into_bstr.html  index.html  struct.RelativePath.html  struct.Utf8Error.html
dev/gix/pathspec/: enum.SearchMode.html  fn.parse.html  index.html  struct.Defaults.html  struct.MagicSignature.html  struct.Pattern.html  struct.Search.html
dev/gix/prelude/: index.html  trait.Finalize.html  trait.Find.html  trait.FindExt.html  trait.Header.html  trait.HeaderExt.html  trait.ObjectIdExt.html  trait.ReferenceExt.html  trait.TreeDiffChangeExt.html  trait.TreeEntryExt.html  trait.TreeEntryRefExt.html  trait.TreeIterExt.html  trait.Write.html
dev/gix/progress/: constant.UNKNOWN.html  enum.Either.html  enum.MessageLevel.html  fn.bytes.html  fn.count.html  (+21 more)
sample_config/: submod.toml
schemas/: submod.json
schemas/latest/: submod.json
schemas/v1.0.0/: submod_config_v1.0.0.json
schemas/v1.1.0/: submod_config_v1.1.0.json  submod_config_v1.1.0.json.license
scripts/: run-tests.sh  run_tests.sh
src/: commands.rs  config.rs  git_manager.rs  git_ops.rs  gitoxide_manager.rs  gitoxide_manager.rs.backup  lib.rs  long_abouts.rs  main.rs  options.rs  shells.rs  simple_gix.rs  utilities.rs
src/git_ops/: git2_ops.rs  gix_ops.rs  mod.rs  simple_gix.rs
tests/: command_contract_tests.rs  config_tests.rs  error_handling_tests.rs  fallback_tests.rs  git_ops_tests.rs  integration_tests.rs  performance_tests.rs  security_tests.rs  sparse_checkout_tests.rs
tests/common/: mod.rs
(+2080 files in other folders)
